--- a/Android/Tai lieu tren mang/FaceBookTool/LoveCalculator/app/src/main/AndroidManifest.xml
+++ b/Android/Tai lieu tren mang/FaceBookTool/LoveCalculator/app/src/main/AndroidManifest.xml
@@ -3,6 +3,7 @@
     package="com.kpt.tunglv.lovecalculator">
 
     <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
 
     <application
         android:allowBackup="true"
